# CHicago-Kernel

./: .gitignore  CMakeLists.txt  README.md  common.ld  main.c  makefile  proj.conf
alloc/: alloc.c
arch/: vmm.cxx
arch/amd64/: include  link-va48.ld  link-va57.ld  link.ld
arch/arm64/: link-va39.ld  link-va48.ld  link.ld
arch/x86/: arch.c  kdriver.s  link.ld  link32.ld  link64.ld  start32.s  start64.s
drvlib/: placeholder.cxx  proj.conf
ds/: avl.c  list.c  queue.c  stack.c
exec/: chexec.c  drv.c  elf.c  elf.cxx  exec.c  lib.c
gui/: render.c  window.c
include/: arch.hxx  boot.hxx  display.hxx  fs.hxx  img.hxx  list.hxx  lock.hxx  math.hxx  mm.hxx  panic.hxx  process.hxx  siafs.hxx  simd.hxx  stacktrace.hxx  status.hxx  string.hxx  textout.hxx  types.hxx  utility.hxx  vararg.hxx
include/chicago/: alloc.h  arch.h  arch.hxx  avl.h  device.h  display.hxx  driver.hxx  drv.h  elf.h  elf.hxx  exec.h  file.h  fs.hxx  gui.h  img.h  img.hxx  ipc.h  list.h  list.hxx  math.hxx  mm.h  mm.hxx  net.h  nls.h  panic.h  process.h  queue.h  sc.h  shm.h  siafs.hxx  stack.h  status.h  status.hxx  string.h  string.hxx  textout.hxx  types.h  types.hxx  usb.h  version.h  (+1 more)
io/: console.c  debug.c  device.c  file.c  kpty.c  map.c
io/dev/: console.c  framebuffer.c  null.c  rawmouse.c  zero.c
io/fs/: devfs.c  iso9660.c
lib/: makefile
lib/base/: cxxsup.cxx  string.cxx  (+1 more)
misc/: bytehelper.cxx  cxxsup.cxx  math.cxx  memory.cxx  string.c  string.cxx  textout.cxx  vararg.cxx  vformat.cxx
mm/: alloc.c  heap.c  heap.cxx  map.c  pf.c  pmm.c  pmm.cxx  shm.c  ualloc.c  virt.c
net/: arp.c  dhcpv4.c  eth.c  icmp.c  ipv4.c  net.c  udp.c
nls/: br.c  en.c
panic/: misc.cxx  panic.cxx  ssp.cxx  ubsan.cxx
sc/: makesc.sh  makesctable.sh  sc.c  syscalls.tbl
src/: common.ld  makefile
sys/: config.c  cxxsup.cxx  drv.c  entry.cxx  fs.cxx  ipc.c  lock.cxx  main.cxx  math.cxx  panic.c  panic.cxx  process.c  process.cxx  sc.c  shell.c  siafs.cxx  stacktrace.cxx  string.c
vid/: console.cxx  display.c  display.cxx  fontdata.cxx  image.cxx  img.c
(+169 files in other folders)
